# onvif_srvd

./: .gitignore  CMakeLists.txt  Dockerfile.onvif-camera  Dockerfile.onvif-camera-local  Makefile  README.md  onvif_firmware_update.grpc.pb.cc  onvif_firmware_update.grpc.pb.h  onvif_firmware_update.pb.cc  onvif_firmware_update.pb.h
proto/: onvif_firmware_update.proto
src/: ServiceDevice.cpp  onvif_firmware_update.grpc.pb.cc  onvif_firmware_update.grpc.pb.h  onvif_firmware_update.pb.cc  onvif_firmware_update.pb.h  onvif_firmware_update_client.cpp  onvif_firmware_update_client.h  upgrade_grpc_client.cc
